--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -1,65 +1,54 @@
 {
-    "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.16/MicrosoftTeams.schema.json",
-    "manifestVersion": "1.16",
-    "version": "1.0.0",
-    "id": "${{TEAMS_APP_ID}}",
-    "packageName": "com.microsoft.teams.extension",
-    "developer": {
-        "name": "Teams App, Inc.",
-        "websiteUrl": "https://www.example.com",
-        "privacyUrl": "https://www.example.com/termofuse",
-        "termsOfUseUrl": "https://www.example.com/privacy"
-    },
-    "icons": {
-        "color": "color.png",
-        "outline": "outline.png"
-    },
-    "name": {
-        "short": "chatterbot-${{TEAMSFX_ENV}}",
-        "full": "full name for chatterbot"
-    },
-    "description": {
-        "short": "short description for chatterbot",
-        "full": "full description for chatterbot"
-    },
-    "accentColor": "#FFFFFF",
-    "bots": [
-        {
-            "botId": "${{BOT_ID}}",
-            "scopes": [
-                "personal",
-                "team",
-                "groupchat"
-            ],
-            "supportsFiles": false,
-            "isNotificationOnly": false,
-            "commandLists": [
-                {
-                    "scopes": [
-                        "personal",
-                        "team",
-                        "groupchat"
-                    ],
-                    "commands": [
-                        {
-                            "title": "welcome",
-                            "description": "Resend welcome card of this Bot"
-                        },
-                        {
-                            "title": "learn",
-                            "description": "Learn about Adaptive Card and Bot Command"
-                        }
-                    ]
-                }
-            ]
-        }
-    ],
-    "composeExtensions": [],
-    "configurableTabs": [],
-    "staticTabs": [],
-    "permissions": [
-        "identity",
-        "messageTeamMembers"
-    ],
-    "validDomains": []
+	"$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.16/MicrosoftTeams.schema.json",
+	"manifestVersion": "1.16",
+	"version": "1.0.0",
+	"id": "${{TEAMS_APP_ID}}",
+	"packageName": "com.microsoft.teams.extension",
+	"developer": {
+		"name": "Teams App, Inc.",
+		"websiteUrl": "https://www.example.com",
+		"privacyUrl": "https://www.example.com/termofuse",
+		"termsOfUseUrl": "https://www.example.com/privacy"
+	},
+	"icons": {
+		"color": "color.png",
+		"outline": "outline.png"
+	},
+	"name": {
+		"short": "chatterbot-${{TEAMSFX_ENV}}",
+		"full": "chatterbot"
+	},
+	"description": {
+		"short": "chatterbot is an AI powered conversational chat bot.",
+		"full": "Built with OpenAI capabilities, this bot is an AI-powered conversational agent designed to interact with users in a natural and human-like manner. Leveraging OpenAI's advanced language models, the chatbot can understand and generate text-based responses to user queries, providing helpful information, answering questions, and engaging in conversations on a wide range of topics. chatterbot utilizes machine learning algorithms and natural language processing techniques to analyze user inputs, comprehend their intent, and generate contextually relevant and coherent responses. It can handle both simple and complex conversations, adapting its responses based on the input received."
+	},
+	"accentColor": "#FFFFFF",
+	"bots": [
+		{
+			"botId": "${{BOT_ID}}",
+			"scopes": ["personal", "team", "groupchat"],
+			"supportsFiles": false,
+			"isNotificationOnly": false,
+			"commandLists": [
+				{
+					"scopes": ["personal", "team", "groupchat"],
+					"commands": [
+						{
+							"title": "welcome",
+							"description": "Resend welcome card of this Bot"
+						},
+						{
+							"title": "learn",
+							"description": "Learn about Adaptive Card and Bot Command"
+						}
+					]
+				}
+			]
+		}
+	],
+	"composeExtensions": [],
+	"configurableTabs": [],
+	"staticTabs": [],
+	"permissions": ["identity", "messageTeamMembers"],
+	"validDomains": []
 }
