--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -15,7 +15,7 @@
 		"outline": "outline.png"
 	},
 	"name": {
-		"short": "chatterbot-${{TEAMSFX_ENV}}",
+		"short": "chatterbot",
 		"full": "chatterbot"
 	},
 	"description": {
